# amx-rs

./: .gitignore  .gitrub_activity  BENCHMARK_RESULTS.md  Cargo.toml  PLAN.md  README.md  bench.sh
.github/workflows/: bench.yml
benchmark-results/: apple-m1-max-20260321-153317.txt  apple-m3-max-20260321-154316.txt  apple-m4-pro-20260321-154247.txt  apple-m4-pro-virtual-20260321-122211.txt  apple-m4-pro-virtual-20260321-123013.txt  apple-m4-pro-virtual-20260321-180124.txt  scalar-vs-amx-m4pro-virtual.csv
crates/amx-rs/: Cargo.toml  README.md
crates/amx-rs/benches/: scalar_vs_amx.rs
crates/amx-rs/benchmark-results/: scalar-vs-amx-latest.csv
crates/amx-rs/examples/: matrix_ops.rs  vector_ops.rs
crates/amx-rs/src/: algorithms.rs  error.rs  gebp.rs  lib.rs  macros.rs  matrix.rs  pool.rs  recursive.rs  vector.rs
crates/amx-sys/: Cargo.toml  README.md  build.rs
crates/amx-sys/benches/: amx_bench.rs
crates/amx-sys/c/: amx.c
crates/amx-sys/src/: lib.rs
experiments/: exp001_microkernel.c  exp002_blocked.c  exp003_amx.c  exp004_parallel.c
figures/: chip-function-throughput-selected-runs.txt
scripts/: aggregate_chip_chart.py  chart_scalar_vs_amx.py  compare_instruction_benchmarks.py  generate_results_md.py  run_benchmark_report.py  summarize_benchmark.py
