[package]
name = "amx-sys"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Low-level AMX (Apple Matrix eXtensions) inline assembly — exact mirror of aarch64.h"
repository = "https://github.com/eugenehp/amx-rs"
keywords = ["amx", "matrix", "acceleration", "arm", "simd"]
categories = ["no-std", "hardware-support"]

[lib]
name = "amx_sys"
path = "src/lib.rs"

[[bench]]
name = "amx_bench"
path = "benches/amx_bench.rs"
harness = false

[dependencies]

[build-dependencies]
cc = "1"

[dev-dependencies]
